--- a/src/Server/appsettings.Development.json
+++ b/src/Server/appsettings.Development.json
@@ -9,6 +9,7 @@
 
   },
   "ConnectionStrings": {
-    "SqlDatabase": "Server=(localdb)\\mssqllocaldb;Database=SportStore;Trusted_Connection=True;"
+    //"SqlDatabase": "Server=(localdb)\\mssqllocaldb;Database=SportStore;Trusted_Connection=True;",
+    "SqlDatabase": "Data Source=localhost,1433;Initial Catalog=Hogent.Examination;User ID=sa;Password=p@ssw0rd;TrustServerCertificate=true"
   }
 }
